--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,8 +16,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-popper": "0.9.2",
+    "react-redux": "5.0.7",
+    "react-redux-form": "1.16.8",
+    "react-router-dom": "4.2.2",
     "react-scripts": "4.0.3",
     "reactstrap": "5.0.0",
+    "redux": "3.7.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
